# explaining-markets-sdk

./: .env.example  .gitignore  LICENSE  README.md  app.py  methodology-competition.md  pyproject.toml  requirements.txt
.chalice/: config.json
chalicelib/: api_client.py  webhook_verify.py
demo/: __main__.py  catcher.py  schema.py  setup.py  sign.py  test.py  tui.py
demo/fixtures/: AAPL_2025-10-30.json  LMT_2025-10-21.json  RIVN_2025-11-04.json  ROKU_2025-10-30.json  UAL_2025-10-16.json
tests/: test_catcher.py  test_vectors.json  test_webhook_verify.py
