[project]
name = "explaining-markets-participant-demo"
version = "0.1.0"
description = "Reference participant for the Explaining Markets prediction competition."
requires-python = ">=3.11,<3.14"
dependencies = [
    "chalice>=1.31",
    "httpx>=0.27",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "pydantic>=2",
    "rich>=13",
    "questionary>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
packages = ["chalicelib", "demo"]

[tool.setuptools.package-data]
demo = ["fixtures/*.json"]
